--- a/app.json
+++ b/app.json
@@ -34,6 +34,7 @@
       "typedRoutes": true
     },
     "extra": {
+      "clerkFrontendApi": "pk_test_YXNzdXJlZC1zaGFyay0yOC5jbGVyay5hY2NvdW50cy5kZXYk",
       "eas": {
         "projectId": "8ecd6d6e-3fac-4ad5-b7f9-fabdfb582022"
       }
